# interrogation-mcp

./: .env.example  .gitignore  Dockerfile  pyproject.toml
src/interrogation_mcp/: auth.py  client.py  config.py  server.py
